[package]
name = "copper"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
egui = "0.29.1"
pipewire = "0.8.0"
libspa = "0.8.0"
libspa-sys = "0.8.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
log = "0.4"
env_logger = "0.11.8"

