[package]
name = "copper"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["glow", "wayland", "x11", "default_fonts"] }
egui = "0.33.3"
pipewire = "0.9.2"
libspa = "0.9.2"
libspa-sys = "0.9.2"
parking_lot = "0.12.5"
crossbeam-channel = "0.5.15"
log = "0.4.29"
env_logger = "0.11.8"

